# kazahana

./: .gitignore  CLAUDE.md  DESIGN_evacuation-assist.md  HANDOFF_evacuation-assist.md  README.ja.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.1.md  RELEASE_NOTES_v1.4.0.md  RELEASE_NOTES_v1.4.1.md  RELEASE_NOTES_v1.4.2.md  RELEASE_NOTES_v1.4.3.md  RELEASE_NOTES_v1.4.4.md  RELEASE_NOTES_v1.4.5.md  RELEASE_NOTES_v1.4.6.md  RELEASE_NOTES_v1.4.7.md  RELEASE_NOTES_v1.4.8.md  RELEASE_NOTES_v1.5.0.md  RELEASE_NOTES_v1.5.1.md  RELEASE_NOTES_v2.0.0.md  RELEASE_NOTES_v2.0.1.md  RELEASE_NOTES_v2.0.6.md  RELEASE_NOTES_v2.0.7.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.1.1.md  RELEASE_NOTES_v2.1.2.md  RELEASE_NOTES_v2.1.3.md  RELEASE_NOTES_v2.1.4.md  RELEASE_NOTES_v2.2.0.md  RELEASE_NOTES_v2.2.1.md  RELEASE_NOTES_v2.2.2.md  RELEASE_NOTES_v2.2.3.md  RELEASE_NOTES_v2.2.5.md  RELEASE_NOTES_v2.2.6.md  RELEASE_NOTES_v2.2.7.md  RELEASE_NOTES_v2.3.0.md  RELEASE_NOTES_v2.4.0.md  RELEASE_NOTES_v2.4.1.md  (+25 more)
.claude/: settings.json
demo/: README.md  index.html  package-lock.json  vite.config.ts
design/: HANDOFF_watermark.md  bsaf-client-implementation-plan.md  kazahana-installation-guide.en.md  kazahana-installation-guide.md  kazahana-mobile-spec.md  kazahana-spec.md  kazahana-website-content.md  remaining-work.md  repost-notification-investigation-2026-03-01.md
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
(+196 files in other folders)
